[package]
name = "rb62"
version = "0.1.0"
authors = ["Fuyang Liu <fuyangl@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench_cpp = []

[dependencies]
hex = { version = "0.4.0", default-features = false } # using no_std
specialized-div-rem = { version = "0.2.0", features = ['no_std'] }
lazy_static = { version = "1.4.0", features = ['spin_no_std'] }

[build-dependencies]
cc = "1.0"

